--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -4,6 +4,8 @@ html(lang="en" ng-app="QuariusApp")
     include includes/head
   
   body(ng-controller="UsersController")
+    #fb-root
+    script(src="./js/facebook.js")
     .sign-up-container(ng-if="showSign")
       include includes/sign-up
     header
