--- a/public/views/includes/head.jade
+++ b/public/views/includes/head.jade
@@ -1,8 +1,14 @@
 meta(charset="UTF-8")
 meta(name="viewport", content="width=device-width, initial-scale=1.0")
 meta(http-equiv="X-UA-Compatible", content="ie=edge")
+meta(property="og:url" content="quariusapp.heroku.com")
+meta(property="og:type" content="website")
+meta(property="og:title" content="Quarius")
+meta(property="og:description" content="Quarius... A personality test for HR")
+meta(property="og:image" content="https://www.astrologyzone.com/wp-content/themes/JointsWP-master/assets/images/horoscopes/horoscope-article-hero/az_img_horoscope_aquarius.png")
 link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
 link(rel="stylesheet", href="/css/application.css")
+script(src="./js/twitter.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-cookies.min.js")
 script(src="/js/main.js")
