--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -55,13 +55,14 @@ nav {
 
 .register-form label,
 .register-form input,
-.register-form p6 {
+.register-form p {
   display: block;
 }
 
-.register-form p6 {
-  padding: 0.5% 0 1% 0;
+.register-form p {
+  // padding: 0.5% 0 1% 0;
   font-style: italic;
+  display: inline;
 }
 
 
@@ -95,17 +96,21 @@ input[type="text"]#signPassword {
 
 .modal-box {
   position: relative;
-  top: 3%;
   background: white;
-  padding: 2%;
-  margin: 4% auto;
+  padding: 3%;
+  margin: 3% auto;
   width: 80%;
   z-index: 6;
   overflow: scroll;
+  border-radius: 5px;
 }
 
 #close-modal {
   float: right;
+}
+
+#close-modal:hover {
+  cursor: pointer;
 }
 
 /********* END REGISTER MODAL *********/
