--- a/public/views/includes/contact.jade
+++ b/public/views/includes/contact.jade
@@ -1,24 +1,31 @@
 h3 Contact Us
-form(action="")
-  div
-    label(for="contactName") Name
-    input(type="text" id="contactName" ng-model="contact.name")
-  div
-    label(for="contactEmail") E-Mail
-    input(type="email" id="contactEmail" ng-model="contact.email")
-  div
-    label(for="contactTopic") Topic
-    select(id="contactTopic" ng-model="contact.topic" required)
-      option(value="Product Question") Product Question
-      option(value="Help Requests") Help Requests
-      option(value="Suggestions") Suggestions
-      option(value="Other") Other
-  div
-    label(for="contactSubject") Subject
-    input(type="text" id="contactSubject" ng-model="contact.subject")
-  div
-    label(for="contactMessage") Message
-    textarea(id="contactMessage" ng-model="contact.message")
-  button(type="button" ng-click="sendMail()") Send Message
+form.form-horizontal()
+  div.form-group
+    label.control-label.col-sm-2(for="contactName") Name
+    .col-sm-6
+      input.form-control(type="text" id="contactName" ng-model="contact.name")
+  div.form-group
+    label.control-label.col-sm-2(for="contactEmail") E-Mail
+    .col-sm-6
+      input.form-control(type="email" id="contactEmail" ng-model="contact.email")
+  div.form-group
+    label.control-label.col-sm-2(for="contactTopic") Topic
+    .col-sm-6
+      select(id="contactTopic" ng-model="contact.topic" required)
+        option(value="Product Question") Product Question
+        option(value="Help Requests") Help Requests
+        option(value="Suggestions") Suggestions
+        option(value="Other") Other
+  div.form-group
+    label.control-label.col-sm-2(for="contactSubject") Subject
+    .col-sm-6
+      input.form-control(type="text" id="contactSubject" ng-model="contact.subject")
+  div.form-group
+    label.control-label.col-sm-2(for="contactMessage") Message
+    .col-sm-6
+      textarea(id="contactMessage" ng-model="contact.message")
+  div.form-group
+    .col-sm-offset-2.col-sm-2
+    button(type="button" ng-click="sendMail()") Send Message
   
 p.message(ng-if="showMessage") {{showMessage}}
