--- a/public/views/includes/sign-up.jade
+++ b/public/views/includes/sign-up.jade
@@ -3,56 +3,64 @@
   div.register-form(ng-if="regSuccess === false")
     h2 Register
     h6 All fields with (*) are required
-    form(ng-submit="register()")
-      div.row
-        div.col-md-3
-          label(for="newUserUsername") Username
+    form.form-horizontal(ng-submit="register()")
+      .form-group
+        label.col-sm-2(for="newUserUsername") Username
+        .col-sm-4
           input(type="text" id="newUserUsername" ng-model="newUser.username" placeholder="Username" minlength="4" required)
-          p6 Example: johnsmith
-        div.col-md-3
-          label(for="newUserPassword") Password
+          p Example: johnsmith
+      .form-group
+        label.col-sm-2(for="newUserPassword") Password
+        .col-sm-4
           input(type="password" id="newUserPassword" ng-model="newUser.password" placeholder="Password" minlength="4" required)
-          p6 Example: MySecretPassword
-        div.col-md-3
-          label(for="newUserFirstName") First Name
+          p Example: MySecretPassword
+        label.col-sm-2(for="confirmPassword") Confirm Password
+        .col-sm-4
+          input(type="password" id="confirmPassword" ng-model="newUser.confirmPassword" placeholder="Password" minlength="4" required)
+          p Example: MySecretPassword
+      .form-group
+        label.col-sm-2(for="newUserFirstName") First Name
+        .col-sm-4
           input(type="text" id="newUserFirstName" ng-model="newUser.firstname" placeholder="First Name" required)
-          p6 Example: John
-        div.col-md-3
-          label(for="newUserLastName") Last Name
+          p Example: John
+        label.col-sm-2(for="newUserLastName") Last Name
+        .col-sm-4
           input(type="text" id="newUserLastName" ng-model="newUser.lastname" placeholder="Last Name" required)
-          p6 Example: Smith
-      div.row
-        div.col-md-12
-          label(for="newUserEmail1") E-Mail Address
+          p Example: Smith
+      .form-group
+        label.col-sm-2(for="newUserEmail1") E-Mail Address
+        .col-sm-4
           input(type="email" id="newUserEmail1" ng-model="newUser.email1" placeholder="E-Mail" required)
-          p6 Example: john.smith@gmail.com
-      div
-        label(for="newUserType") Membership Level
-        select(id="newUserType" ng-model="newUser.type" required)
-          option(value="0") Team Member
-          option(value="1") Team Leader
-          option(value="2") Manager
-      div.row
-        div.col-md-4(ng-if="newUser.type > 0")
-          label(for="newUserCompany") Company/Organization
+          p Example: john.smith@gmail.com
+      .form-group
+        label.col-sm-2(for="newUserType") Membership Level
+        .col-sm-4
+          select(id="newUserType" ng-model="newUser.type" required)
+            option(value="0") Team Member
+            option(value="1") Team Leader
+            option(value="2") Manager
+      .form-group(ng-if="newUser.type > 0")
+        label.col-sm-2(for="newUserCompany") Company/Organization
+        .col-sm-4
           input(type="text" id="newUserCompany" ng-model="newUser.company" placeholder="Company/Organization" required)
-          p6 Example: Serval Ventures
-        div.col-md-4(ng-if="newUser.type > 0")
-          label(for="newUserPosition") Position
+          p Example: Serval Ventures
+        label.col-sm-2(for="newUserPosition") Position
+        .col-sm-4
           input(type="text" id="newUserPosition" ng-model="newUser.position" placeholder="Position" required)
-          p6 Example: Director of HR
-      div.row
-        div.col-md-4(ng-if="newUser.type > 1")
-          label(for="newUserEmail2") Alternate E-Mail Address
-          input(type="email" id="newUserEmail2" ng-model="newUser.email2" placeholder="Alternate E-Mail")
-          p6 Example: johnnyrocket@yahoo.com
-        div.col-md-4(ng-if="newUser.type > 1")
-          label(for="newUserOffPhone") Office Phone Number
+          p Example: Director of HR
+      .form-group(ng-if="newUser.type > 1")
+        label.col-sm-2(for="newUserOffPhone") Office Phone Number
+        .col-sm-4
           input(type="tel" id="newUserOffPhone" ng-model="newUser.offPhone" placeholder="Office Phone Number" required)
-          p6 Example: 555-555-5555
-        div.col-md-4(ng-if="newUser.type > 1")
-          label(for="newUserCellPhone") Cell Phone Number 
+          p Example: 555-555-5555
+        label.col-sm-2(for="newUserCellPhone") Cell Phone Number 
+        .col-sm-4
           input(type="tel" id="newUserCellPhone" ng-model="newUser.cellPhone" placeholder="Cell Phone Number" required)
-          p6 Example: 666-666-6666
+          p Example: 666-666-6666
+      .form-group(ng-if="newUser.type > 1")
+        label.col-sm-2(for="newUserEmail2") Alternate E-Mail Address
+        .col-sm-4
+          input(type="email" id="newUserEmail2" ng-model="newUser.email2" placeholder="Alternate E-Mail")
+          p Example: johnnyrocket@yahoo.com
       button(type="submit") Register
   p(ng-if="regMessage") {{regMessage}}
