--- a/public/views/includes/4qtest.jade
+++ b/public/views/includes/4qtest.jade
@@ -1,36 +1,38 @@
-h3 4 Q Test
-p(ng-show="!currentUser") We'd love to hear from you! Your information will not be shared etc... Please provide your name and e-mail so we can learn more about how to develop our product...
-form(ng-show="!currentUser")
-  label(for="sampleName") Name
-  input(type="text" id="sampleName" ng-model="sample.name" placeholder="Name")
-  label(for="sampleEmail") E-Mail
-  input(type="email" id="sampleEmail" ng-model="sample.email" placeholder="Email")
-form
-  h4 At least 51% of the time, you tend to:
-  div
-    h5 I am more...
-    label() Practical and realistic
-      input(type="radio" value="A" name="q1" ng-model="quiz.q1")
-    label() Imaginative and theoretical
-      input(type="radio" value="B" name="q1" ng-model="quiz.q1")
-  div
-    h5 I am more...
-    label() Flexible and spontaneous
-      input(type="radio" value="A" name="q2" ng-model="quiz.q2")
-    label() Punctual and scheduled
-      input(type="radio" value="B" name="q2" ng-model="quiz.q2")
-  div
-    h5 I am more...
-    label() Objective and analytical
-      input(type="radio" value="A" name="q3" ng-model="quiz.q3")
-    label() Compassionate and empathetic
-      input(type="radio" value="B" name="q3" ng-model="quiz.q3")
-  div
-    h5 I am more...
-    label() Reflective and independent
-      input(type="radio" value="A" name="q4" ng-model="quiz.q4")
-    label() Outspoken and social
-      input(type="radio" value="B" name="q4" ng-model="quiz.q4")
-  button(type="submit" ng-click="submit4q()") Click Me
-  p.test-error(ng-if="fourQerr") {{fourQerr}}
-  p.test-4-results(ng-if="fourQresults") {{fourQresults}}
+.modal-box
+  span.close-modal(ng-click="closeTest()") X
+  h3 4 Q Test
+  p(ng-show="!currentUser") We'd love to hear from you! Your information will not be shared etc... Please provide your name and e-mail so we can learn more about how to develop our product...
+  form(ng-show="!currentUser")
+    label(for="sampleName") Name
+    input(type="text" id="sampleName" ng-model="sample.name" placeholder="Name")
+    label(for="sampleEmail") E-Mail
+    input(type="email" id="sampleEmail" ng-model="sample.email" placeholder="Email")
+  form
+    h4 At least 51% of the time, you tend to:
+    div
+      h5 I am more...
+      label() Practical and realistic
+        input(type="radio" value="A" name="q1" ng-model="quiz.q1")
+      label() Imaginative and theoretical
+        input(type="radio" value="B" name="q1" ng-model="quiz.q1")
+    div
+      h5 I am more...
+      label() Flexible and spontaneous
+        input(type="radio" value="A" name="q2" ng-model="quiz.q2")
+      label() Punctual and scheduled
+        input(type="radio" value="B" name="q2" ng-model="quiz.q2")
+    div
+      h5 I am more...
+      label() Objective and analytical
+        input(type="radio" value="A" name="q3" ng-model="quiz.q3")
+      label() Compassionate and empathetic
+        input(type="radio" value="B" name="q3" ng-model="quiz.q3")
+    div
+      h5 I am more...
+      label() Reflective and independent
+        input(type="radio" value="A" name="q4" ng-model="quiz.q4")
+      label() Outspoken and social
+        input(type="radio" value="B" name="q4" ng-model="quiz.q4")
+    button(type="submit" ng-click="submit4q()") Click Me
+    p.test-error(ng-if="fourQerr") {{fourQerr}}
+    p.test-4-results(ng-if="fourQresults") {{fourQresults}}
