fixes 4q quiz button issue

--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -75,7 +75,7 @@ textarea {
 
 
 input[type="text"]#signUsername,
-input[type="text"]#signPassword {
+input[type="password"]#signPassword {
   border: none;
   border-radius: 5px;
   margin: 10px;
