--- a/public/views/includes/home.jade
+++ b/public/views/includes/home.jade
@@ -17,7 +17,7 @@ div(ng-show="!currentUser")
   h5 Managing a diverse group can be challenging
   p Take a quick quiz to gain insight into your own color personality, and share it with your team to find out more about how you can strengthen your work relationships and improve understanding of your role on the team.
   a(ng-click="take4Qquiz()") Four Question Quiz
-  a(ng-click="twelveQquiz = true" ng-show="!twelveQquiz") Twelve Question Quiz
+  //- a(ng-click="twelveQquiz = true" ng-show="!twelveQquiz") Twelve Question Quiz
 
 div(ng-show="currentUser")
   include userpage.jade
