--- a/public/views/includes/head.jade
+++ b/public/views/includes/head.jade
@@ -15,4 +15,5 @@ script(src="/js/main.js")
 script(src="./js/controllers/usersController.js")
 script(src="./js/controllers/sendMailController.js")
 script(src="./js/controllers/testController.js")
+script(src="./js/controllers/teamsController.js")
 title Quarius
