adds angular responsive team member list and colored list

--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -190,6 +190,19 @@ h4[class*="color-box-"] {
 .color-box-Green {
   color: green;
 }
+
+.user-color-list-Green {
+  color: green;
+}
+.user-color-list-Red {
+  color: red;
+}
+.user-color-list-Gold {
+  color: gold;
+}
+.user-color-list-Blue{
+  color: blue;
+}
 /******** END COLORBOXES ********/
 
 .logged-results {
