--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -97,6 +97,9 @@ input[type="password"]#signPassword {
   margin: 10px;
   padding: 4px;
   color: cornflowerblue;
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 #log-out {
